# VMware-NSX

./: Dockerfile  README-CN.md  README.md  RELEASE_NOTES.md  config.example.yaml  docker-compose.yml  pyproject.toml  server.json  smithery.yaml
examples/mcp-configs/: README.md  continue.yaml  cursor.json  goose.json  localcowork.json  mcp-agent.yaml  vscode-copilot.json
mcp_server/: __init__.py  server.py
skills/vmware-nsx/: SKILL.md
skills/vmware-nsx/evals/: evals.json
skills/vmware-nsx/references/: capabilities.md  cli-reference.md  setup-guide.md
tests/: test_no_destructive_ops.py
vmware_nsx/: __init__.py  cli.py  config.py  connection.py  doctor.py
vmware_nsx/notify/: audit.py
vmware_nsx/ops/: health.py  inventory.py  nat_route_mgmt.py  networking.py  segment_mgmt.py  troubleshoot.py
